fix: heading sizes adjusted and dash in heading hidden on mobile view

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,7 +119,7 @@
   }
   
   .home-heading .popeys {
-    font-size: 2.6rem;
+    font-size: 3.8rem;
     color: #004c3f;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
     font-weight: bold;
@@ -134,6 +134,10 @@
     display: block;
     margin-top: 6px;
   }
+
+  .mobile-dash {
+    display: none;
+  }
   
   .home-heading .subtext {
     font-size: 1.4rem;
@@ -146,7 +150,7 @@
   
   #home p {
     margin: 18px auto;
-    font-size: 1.05rem;
+    font-size: .9rem;
     max-width: 340px;
     font-weight: bold;
     color: #000;
